--- a/templates/index.html
+++ b/templates/index.html
@@ -11,18 +11,18 @@
         <script src="{{ url_for('static', filename='js/script.js') }}"></script>       
         {% endblock %}
 
-        <div  class="container ">
-            <span class="type" style="--n:200">This is the flame of fate, make a wish and click on me so I will tell you a secret!</span>
+        <div  class="container" id="flashtext">
+            <span class="type" style="--n:400">This is the flame of fate, make a wish and give the fire a poke until it tells you a secret!</span>
 
         </div>
         
         <div class="glow" onclick="myFunction()"></div>
         <div class="flame"></div>
 
-        <div class="dialtext">
-            {% if output %}
-            <p> {{ output }}</p>
-            {% endif %}
+        <div class="text" >
+            {% for message in get_flashed_messages() %}
+            <p> {{ message }}</p>
+            {% endfor %}
         </div>
     </body>
 </html>
